Added progress bar to show the host cpu load
Bug-Url: https://github.com/kerubistan/kerub/issues/107
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -334,7 +334,7 @@
     </script>
     <script type="text/ng-template" id="HostDetails.html">
         <div class="modal-header">
-            <h3 class="modal-title"><span ng-class="iconByStatus()"></span> Host Details - {{host.address}}</h3>
+            <h3 class="modal-title"><span ng-if="dyn.status" ng-class="hostStatusIcon()"></span> Host Details - {{host.address}}</h3>
         </div>
         <ul class="nav nav-tabs">
             <li role="presentation" ng-class="isActive('overview')" ng-click="selectView('overview')"><a href="#">Overview</a></li>
@@ -384,6 +384,12 @@
 
             <div class="form-group">
                 <label>load</label>
+                <div class="form-group">
+                    <uib-progress>
+                        <uib-bar value="dyn.userCpu" max="100" type="info">{{dyn.userCpu}} %</uib-bar>
+                        <uib-bar value="dyn.systemCpu" max="100" type="warning">{{dyn.systemCpu}} %</uib-bar>
+                    </uib-progress>
+                </div>
             </div>
 
             <div class="form-group">
