--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -58,7 +58,7 @@
         </tab>
         <tab ng-controller="VirtualDisksTab">
             <tab-heading>
-                <i class="glyphicon glyphicon-hdd"></i> Virtual disks
+                <i class="fa fa-database"></i> Virtual disks
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVirtualDisk()">New Disk</button>
             <table class="table table-striped table-hover">
@@ -140,11 +140,6 @@
                 <li><a href="#">&laquo;</a></li>
                 <li><a href="#">&raquo;</a></li>
             </ul>
-        </tab>
-        <tab disabled="true">
-            <tab-heading>
-                <i class="fa fa-database"></i> Storage
-            </tab-heading>
         </tab>
         <tab ng-controller="VersionInfo">
             <tab-heading>
