Some restructuring of the UI logic around expectations
Bug-Url: https://github.com/kerubistan/kerub/issues/129
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
     <script src="js/NewVmWizard.js"></script>
     <script src="js/HostDetails.js"></script>
     <script src="js/MainTabs.js"></script>
+    <script src="js/Expectations.js"></script>
     <script src="js/ExpectationMini.js"></script>
     <script src="js/DiskSelectionElem.js"></script>
     <script src="js/StorageDeviceRow.js"></script>
