Some buttons now have tooltip and no label - only icon
Bug-Url: https://github.com/kerubistan/kerub/issues/122
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -140,11 +140,9 @@
             </tab>
         </tabset>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="addStorage()">
-                Add
+            <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="addStorage()" uib-tooltip="Create this virtual disk" tooltip-placement="top">
             </button>
-            <button type="button" class="btn btn-primary glyphicon glyphicon-remove" ng-click="close()">
-                Cancel
+            <button type="button" class="btn btn-primary glyphicon glyphicon-remove" ng-click="close()" uib-tooltip="Cancel" tooltip-placement="top">
             </button>
         </div>
     </script>
@@ -333,11 +331,9 @@
             </tab>
         </tabset>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="addVm()">
-                Add
+            <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="addVm()" uib-tooltip="Add this VM" tooltip-placement="top">
             </button>
-            <button type="button" class="btn btn-primary glyphicon glyphicon-remove" ng-click="close()">
-                Cancel
+            <button type="button" class="btn btn-primary glyphicon glyphicon-remove" ng-click="close()" uib-tooltip="Cancel" tooltip-placement="top">
             </button>
         </div>
 
@@ -409,11 +405,9 @@
                 updating
             </span>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="addHost()">
-                Add
+            <button type="button" class="btn btn-primary glyphicon glyphicon-ok-sign" ng-click="addHost()" uib-tooltip="Join this host to the IaaS service" tooltip-placement="top">
             </button>
-            <button type="button" class="btn btn-primary glyphicon glyphicon-remove" ng-click="close()">
-                Cancel
+            <button type="button" class="btn btn-primary glyphicon glyphicon-remove" ng-click="close()" uib-tooltip="Cancel" tooltip-placement="top">
             </button>
         </div>
 
