--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -1,36 +1,37 @@
 <div ng-controller="MainTabs">
-    <tabset>
-        <tab ng-controller="VmTab">
-            <tab-heading>
+    <uib-tabset>
+        <uib-tab>
+            <uib-tab-heading>
                 <i class="fa fa-cubes"></i> VMs
-            </tab-heading>
-            <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVmForm()" uib-tooltip="Create new VM" tooltip-placement="right"></button>
-            <table class="table table-striped table-hover">
-                <thead>
-                <tr>
-                    <td>name</td>
-                    <td style="width:30px">vCPUs</td>
-                    <td style="width:90px">RAM</td>
-                    <td>status</td>
-                    <td>expectations</td>
-                    <td>actions</td>
-                </tr>
-                </thead>
-                <tbody>
+            </uib-tab-heading>
+            <span ng-controller="VmTab">
+                <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVmForm()" uib-tooltip="Create new VM" tooltip-placement="right"></button>
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <td>name</td>
+                        <td style="width:30px">vCPUs</td>
+                        <td style="width:90px">RAM</td>
+                        <td>status</td>
+                        <td>expectations</td>
+                        <td>actions</td>
+                    </tr>
+                    </thead>
+                    <tbody>
                     <tr ng-repeat="_vm in vms" ng-controller="VmRow" ng-init="init(_vm)">
                         <td>{{vm.name}}</td>
                         <td>{{vm.nrOfCpus}}</td>
                         <td>{{humanFriendlySize(vm.memory.min)}} - {{humanFriendlySize(vm.memory.max)}}</td>
                         <td>{{vmdyn.load()}}</td>
                         <td>
-                            <span ng-repeat="expectation in _vm.expectations"
-                                  ng-controller="ExpectationMini"
-                                  ng-init="init(expectation)">
-                                <span class="label label-{{style}}">
-                                    <span class="{{icon}}"></span>
-                                    {{description}}
+                                <span ng-repeat="expectation in _vm.expectations"
+                                      ng-controller="ExpectationMini"
+                                      ng-init="init(expectation)">
+                                    <span class="label label-{{style}}">
+                                        <span class="{{icon}}"></span>
+                                        {{description}}
+                                    </span>
                                 </span>
-                            </span>
                         </td>
                         <td>
                             <button type="button"
@@ -59,111 +60,116 @@
                             </button>
                         </td>
                     </tr>
-                </tbody>
-            </table>
-        </tab>
-        <tab disabled="true">
-            <tab-heading>
+                    </tbody>
+                </table>
+            </span>
+        </uib-tab>
+        <uib-tab disabled="true">
+            <uib-tab-heading>
                 <i class="fa fa-sitemap"></i> Virtual networks
-            </tab-heading>
+            </uib-tab-heading>
 
-        </tab>
-        <tab ng-controller="VirtualDisksTab">
-            <tab-heading>
+        </uib-tab>
+        <uib-tab >
+            <uib-tab-heading>
                 <i class="fa fa-database"></i> Virtual disks
-            </tab-heading>
-            <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVirtualDisk()" uib-tooltip="Create new Virtual Disk" tooltip-placement="right"></button>
-            <table class="table table-striped table-hover">
-                <thead>
-                <tr>
-                    <td>name</td>
-                    <td>size</td>
-                    <td>readonly</td>
-                    <td>expectations</td>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="virtDisk in virtualDisks.result">
-                        <td>
-                            {{virtDisk.name}}
-                        </td>
-                        <td>
-                            {{humanFriendlySize(virtDisk.size)}}
-                        </td>
-                        <td>
-                            {{virtDisk.readOnly}}
-                        </td>
-                        <td>
-                            <span ng-repeat="expectation in virtDisk.expectations"
-                                  ng-controller="ExpectationMini"
-                                  ng-init="init(expectation)">
-                                <span class="label label-{{style}}">
-                                    <span class="{{icon}}"></span>
-                                    {{description}}
+            </uib-tab-heading>
+            <span ng-controller="VirtualDisksTab">
+                <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVirtualDisk()" uib-tooltip="Create new Virtual Disk" tooltip-placement="right"></button>
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <td>name</td>
+                        <td>size</td>
+                        <td>readonly</td>
+                        <td>expectations</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="virtDisk in virtualDisks.result">
+                            <td>
+                                {{virtDisk.name}}
+                            </td>
+                            <td>
+                                {{humanFriendlySize(virtDisk.size)}}
+                            </td>
+                            <td>
+                                {{virtDisk.readOnly}}
+                            </td>
+                            <td>
+                                <span ng-repeat="expectation in virtDisk.expectations"
+                                      ng-controller="ExpectationMini"
+                                      ng-init="init(expectation)">
+                                    <span class="label label-{{style}}">
+                                        <span class="{{icon}}"></span>
+                                        {{description}}
+                                    </span>
                                 </span>
-                            </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </span>
+        </uib-tab>
+        <uib-tab>
+            <uib-tab-heading>
+                <i class="fa fa-server"></i> Hosts
+            </uib-tab-heading>
+            <span ng-controller="HostTab">
+                <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()" uib-tooltip="Join a new Host" tooltip-placement="right"></button>
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <td>address</td>
+                        <td>status</td>
+                        <td>dedicated</td>
+                        <td>info</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="host in hosts" class="clickable" ng-click="showHostDetails(host.id)">
+                        <td>{{host.address}}</td>
+                        <td>N/A</td>
+                        <td>{{host.dedicated}}</td>
+                        <td><span ng-if="host.capabilities.distribution" class="label label-primary">
+                                    <i class="fa fa-linux"></i>
+                                    {{host.capabilities.distribution.name}}
+                                    {{host.capabilities.distribution.version.major}}
+                                    {{host.capabilities.distribution.version.minor}}
+                                    </span>
+                                    <span ng-if="host.capabilities.system.manufacturer" class="label label-default">
+                                    <i class="fa fa-industry"></i>
+                                    {{host.capabilities.system.manufacturer}}
+                                    </span>
+                                    <span ng-if="host.capabilities.cpuArchitecture" class="label label-info">
+                                    <i class="fa fa-gear"></i>
+                                    {{host.capabilities.cpuArchitecture}}
+                                    </span>
+                                    <span ng-if="host.capabilities.cpuArchitecture" class="label label-success">
+                                    <i class="fa fa-reorder"></i>
+                                    {{humanFriendlySize(host.capabilities.totalMemory)}}
+                                    </span>
                         </td>
                     </tr>
-                </tbody>
-            </table>
-        </tab>
-        <tab ng-controller="HostTab">
-            <tab-heading>
-                <i class="fa fa-server"></i> Hosts
-            </tab-heading>
-            <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()" uib-tooltip="Join a new Host" tooltip-placement="right"></button>
-            <table class="table table-striped table-hover">
-                <thead>
-                <tr>
-                    <td>address</td>
-                    <td>status</td>
-                    <td>dedicated</td>
-                    <td>info</td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="host in hosts" class="clickable" ng-click="showHostDetails(host.id)">
-                    <td>{{host.address}}</td>
-                    <td>N/A</td>
-                    <td>{{host.dedicated}}</td>
-                    <td><span ng-if="host.capabilities.distribution" class="label label-primary">
-                                <i class="fa fa-linux"></i>
-                                {{host.capabilities.distribution.name}}
-                                {{host.capabilities.distribution.version.major}}
-                                {{host.capabilities.distribution.version.minor}}
-                                </span>
-                                <span ng-if="host.capabilities.system.manufacturer" class="label label-default">
-                                <i class="fa fa-industry"></i>
-                                {{host.capabilities.system.manufacturer}}
-                                </span>
-                                <span ng-if="host.capabilities.cpuArchitecture" class="label label-info">
-                                <i class="fa fa-gear"></i>
-                                {{host.capabilities.cpuArchitecture}}
-                                </span>
-                                <span ng-if="host.capabilities.cpuArchitecture" class="label label-success">
-                                <i class="fa fa-reorder"></i>
-                                {{humanFriendlySize(host.capabilities.totalMemory)}}
-                                </span>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <ul class="pagination">
-                <li><a href="#">&laquo;</a></li>
-                <li><a href="#">&raquo;</a></li>
-            </ul>
-        </tab>
-        <tab ng-controller="VersionInfo">
-            <tab-heading>
+                    </tbody>
+                </table>
+                <ul class="pagination">
+                    <li><a href="#">&laquo;</a></li>
+                    <li><a href="#">&raquo;</a></li>
+                </ul>
+            </span>
+        </uib-tab>
+        <uib-tab>
+            <uib-tab-heading>
                 <i class="glyphicon glyphicon-info-sign"></i> About
-            </tab-heading>
-            <div class="versioninfobox">
+            </uib-tab-heading>
+            <div ng-controller="VersionInfo" class="versioninfobox">
                 <img src="img/kerub.png"><br>
                 <span>title: {{versionInfo.title}}</span><br>
                 <span>vendor: {{versionInfo.vendor}}</span><br>
                 <span>version: {{versionInfo.version}}</span><br>
                 <span><a href="apidoc/">api documentation</a></span><br>
             </div>
-        </tab>
-    </tabset>
+        </uib-tab>
+    </uib-tabset>
 </div>
