use minified angular js scripts
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>kerub</title>
-    <script src="webjars/angularjs/1.4.9/angular.js"></script>
-    <script src="webjars/angularjs/1.4.9/angular-sanitize.js"></script>
-    <script src="webjars/angularjs/1.4.9/angular-route.js"></script>
+    <script src="webjars/angularjs/1.4.9/angular.min.js"></script>
+    <script src="webjars/angularjs/1.4.9/angular-sanitize.min.js"></script>
+    <script src="webjars/angularjs/1.4.9/angular-route.min.js"></script>
     <script src="webjars/angular-uuid4/0.2.1/angular-uuid4.min.js"></script>
     <script src="webjars/angular-ui-bootstrap/1.1.1-1/ui-bootstrap-tpls.min.js"></script>
     <script src="webjars/sockjs-client/0.3.4/sockjs.min.js"></script>
