fix: serialization of the FsStorageCapability -> fs correct display of fs mounts on the host details UI
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -572,6 +572,9 @@
                                 </span>
 
                             </span>
+                            <span ng-if="cap['@type'] === 'fs'">
+                                <span class="label label-default"><span class="fa fa-folder"></span> {{cap.mountPoint}}</span>
+                            </span>
                         </td>
                     </tr>
                 </tbody>
